Update and rename legolando30.html to legolando31.html

--- a/example/legolando31.html
+++ b/example/legolando31.html
@@ -354,7 +354,7 @@ this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.Pz=Pz
 	
 function changeFunc() {
 
-functionPeS();	
+// functionPeS();	
 	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
