--- a/example/legolando32.html
+++ b/example/legolando32.html
@@ -358,6 +358,7 @@ function changeFunc() {
 	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
+var coord;
 	
 var hreftemp = document.getElementById("modelAr3Dlink").href;
 hreftemp = hreftemp.replace(/(&Dst=1%20m)+/g, "");
@@ -380,8 +381,10 @@ hreftemp = hreftemp.replace(/(&Dst=4,5%20m)+/g, "");
 	
 if (strUser != "Seleziona")  {	
 
-        document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
 	
+	coord = "";
+        coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
+	document.getElementById("modelAr3Dlink").href = coord;
 	
    } else {
 		
