Update and rename legolandobis38.html to legolandobis39.html

--- a/example/legolandobis39.html
+++ b/example/legolandobis39.html
@@ -383,25 +383,28 @@ if (strUser != "Seleziona")  {
 
 	
 coord = ""; document.getElementById("modelAr3Dlink").href = "";
-coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py;
+coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
 // document.getElementById("modelAr3Dlink").href = coord;
 	
 var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare ripetizioni i.e. Sz
 	
 	if (count > 1) {  alert(count); 
-			/* elimina parti identiche della stringa coord   */  /*     +"&Pz="+this.Pz[8]          */
+			/* elimina parti identiche della stringa coord   */  
 			
+			var Pz_i-1=this.Pz[8];
 			var reSz = /&Sz=s3/gi;
          		var reSx = /&Sx=NaN/gi;
          		var reSy = /&Sy=s2/gi;
         		var rePx = /&Px=p1/gi;
         		var rePy = /&Py=p2/gi;
+			var rePz = /&Pz=-8.9/gi;
 		
 			var noSz = coord.replace(reSz, "");
          		var noSzSx = noSz.replace(reSx, "");
          		var noSzSxSy = noSzSx.replace(reSy, "");
          		var noSzSxSyPx = noSzSxSy.replace(rePx, "");
          		var noSzSxSyPxPy = noSzSxSyPx.replace(rePy, "");
+			var noSzSxSyPxPyPz = noSzSxSyPxPy.replace(rePz, "");
 			
 			coord="";
 			coord = noSzSxSyPxPy+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
