Update and rename legolandobis39.html to legolandobis40.html

--- a/example/legolandobis40.html
+++ b/example/legolandobis40.html
@@ -383,7 +383,7 @@ if (strUser != "Seleziona")  {
 
 	
 coord = ""; document.getElementById("modelAr3Dlink").href = "";
-coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
+coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8]+"";
 // document.getElementById("modelAr3Dlink").href = coord;
 	
 var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare ripetizioni i.e. Sz
@@ -391,7 +391,7 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
 	if (count > 1) {  alert(count); 
 			/* elimina parti identiche della stringa coord   */  
 			
-			var Pz_i-1=this.Pz[8];
+			
 			var reSz = /&Sz=s3/gi;
          		var reSx = /&Sx=NaN/gi;
          		var reSy = /&Sy=s2/gi;
