--- a/example/legolandobis43.html
+++ b/example/legolandobis43.html
@@ -354,8 +354,6 @@ this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=e
 } ////////////	
 	
 function changeFunc() {
-
-// functionPeS();	
 	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
@@ -389,10 +387,9 @@ coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&
 	
 var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare ripetizioni i.e. Sz
 	
-	if (count > 1) {  alert(count); 
+	if (count > 1) { 
 			/* elimina parti identiche della stringa coord   */  
-			
-			
+	
 			var reSz = /&Sz=s3/gi;
          		var reSx = /&Sx=NaN/gi;
          		var reSy = /&Sy=s2/gi;
@@ -419,7 +416,7 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
 		
 	functionPeS();
 	var lastind = (parseInt(this.elD) - 1 );	
-	document.getElementById("modelAr3Dlink").href = hreftemp+"&Dst=1 m"+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[lastind];	
+	document.getElementById("modelAr3Dlink").href = ""+hreftemp+"&Dst=1 m"+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[lastind];	
 		
 	}
 
