Update and rename legolandobis44.html to legolandobis45.html

--- a/example/legolandobis45.html
+++ b/example/legolandobis45.html
@@ -414,9 +414,8 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
 	
    } else {
 		
-	this.functionPeS();
-	var lastind = (parseInt(this.elD) - 1 );	
-	document.getElementById("modelAr3Dlink").href = ""+hreftemp+"&Dst=1 m"+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[lastind];	
+		
+	document.getElementById("modelAr3Dlink").href = ""+hreftemp+"&Dst=1 m"+"&Choice=NO%20SELECTION";	
 		
 	}
 
