Update and rename zktm63BIS.html to zktm64BIS.html

--- a/example/zktm64BIS.html
+++ b/example/zktm64BIS.html
@@ -288,25 +288,27 @@
 <h4 style="color:green">Inserire la distanza a cui porre l&rsquo;arredo (in metri)</h4>		    
 <p id="distanzaitemcam"></p>
 
+<myelement id="mioelemento" onclick="disableOpts()">		    
 <span id="vettPeS" onclick="functionPeS()">		    
 <select id="ddlViewBy" onchange="changeFunc();">
-  <option value="0" selected="selected">Seleziona</option>
-  <option value="1">1 m</option>
-  <option value="1">1,5 m</option>
-  <option value="2">2 m</option>
-  <option value="2">2,5 m</option>
-  <option value="3">3 m</option>
-  <option value="3">3,5 m</option>
-  <option value="3">4 m</option>
-  <option value="3">4,5 m</option>
-  <option value="3">5 m</option>
-  <option value="3">6 m</option>
-  <option value="3">7 m</option>
-  <option value="3">8 m</option>
-  <option value="3">9 m</option>
-  <option value="3">10 m</option>
+  <option value="0" style="font-weight:bold;" selected="selected">Seleziona</option>
+  <option value="1" style="font-weight:bold;">1 m</option>
+  <option value="2" style="font-weight:bold;">1,5 m</option>
+  <option value="3" style="font-weight:bold;">2 m</option>
+  <option value="4" style="font-weight:bold;">2,5 m</option>
+  <option value="5" style="font-weight:bold;">3 m</option>
+  <option value="6" style="font-weight:bold;">3,5 m</option>
+  <option value="7" style="font-weight:bold;">4 m</option>
+  <option value="8" style="font-weight:bold;">4,5 m</option>
+  <option value="9" style="font-weight:bold;">5 m</option>
+  <option value="10" style="font-weight:bold;">6 m</option>
+  <option value="11" style="font-weight:bold;">7 m</option>
+  <option value="12" style="font-weight:bold;">8 m</option>
+  <option value="13" style="font-weight:bold;">9 m</option>
+  <option value="14" style="font-weight:bold;">10 m</option>
 </select>
-</span>	
+</span>
+</myelement>	
 		    
 <script>
 	
