--- a/example/zktm65BIS.html
+++ b/example/zktm65BIS.html
@@ -320,8 +320,13 @@ var Py;
 var D;	
 var elD;	
 var Pz;	
+var iD;	
 	
-	///////////////////
+	
+function disableOpts() {
+// Get all options within <select id='ddlViewBy'>...</select>	
+
+///////////////////	
 function functionPeS() {	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;
 var seqvettori ="?"+preseqvett;
@@ -351,9 +356,142 @@ for (ii = 1; ii <= Pz.length; ii++) {
      
 }
 	
-this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	
+this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD;
 	
 } ////////////	
+	
+
+var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
+
+        switch (this.iD) {
+
+           case 0:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") )
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 1:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") )
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;         
+           case 2:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") )
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;         
+           case 3:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;                
+           case 4:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;        
+           case 5:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;        
+           case 6:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;        
+           case 7:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;        
+           case 8:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break; 
+           case 9:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 10:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8") || (op[ij].value == "9"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 11:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8") || (op[ij].value == "9") || (op[ij].value == "10"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 12:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8") || (op[ij].value == "9") || (op[ij].value == "10") || (op[ij].value == "11"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 13:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8") || (op[ij].value == "9") || (op[ij].value == "10") || (op[ij].value == "11") || (op[ij].value == "12"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+        		break;
+           case 14:
+                for (var ij = 0; ij < op.length; ij++) {
+  				// comparison for value
+ 				( (op[ij].value == "0") || (op[ij].value == "1") || (op[ij].value == "2") || (op[ij].value == "3") || (op[ij].value == "4") || (op[ij].value == "5") || (op[ij].value == "6") || (op[ij].value == "7") || (op[ij].value == "8") || (op[ij].value == "9") || (op[ij].value == "10") || (op[ij].value == "11") || (op[ij].value == "12") || (op[ij].value == "13"))
+  			    ? op[ij].disabled = true
+  			    : op[ij].disabled = false; 
+				}
+                
+		} ///// fine switch ////
+
+
+}   //// fine funzione disableOpts() ////
+	
+	
+	
 	
 function changeFunc() {
 	
