Update and rename zktm66BIS.html to zktm67BIS.html

--- a/example/zktm67BIS.html
+++ b/example/zktm67BIS.html
@@ -356,6 +356,8 @@ for (ii = 1; ii <= Pz.length; ii++) {
 }
 	
 this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD;
+
+disableOpts();	
 	
 } ////////////	
 	
