Update and rename zktm68BIS.html to zktm69BIS.html

--- a/example/zktm69BIS.html
+++ b/example/zktm69BIS.html
@@ -377,7 +377,7 @@ var iDbis= parseInt(Dbis.substr(0, Dbis.indexOf(':')));
 ///////////////////////////////////////////////////////////////////	
 
 	
-        switch (this.iDbis) {
+        switch (iDbis) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
