--- a/example/zktm70BIS.html
+++ b/example/zktm70BIS.html
@@ -366,18 +366,8 @@ function disableOpts() {
 // Get all options within <select id='ddlViewBy'>...</select>
 var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
-/////////////////////////////////////////////////////////////////	
-var preseqvettbis = document.getElementById("modelDatartot").innerHTML;
-var seqvettoribis ="?"+preseqvettbis;
-var preDbis = seqvettoribis.split("D=", 2);
-var Dbis = preDbis[1];
-var iDbis= parseInt(Dbis.substr(0, Dbis.indexOf(':')));	
 	
-	
-///////////////////////////////////////////////////////////////////	
-
-	
-        switch (iDbis) {
+        switch (this.iD) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
@@ -500,7 +490,7 @@ var iDbis= parseInt(Dbis.substr(0, Dbis.indexOf(':')));
 				}
                 
 		} ///// fine switch ////
-
+this.iD=15; 
 
 }   //// fine funzione disableOpts() ////
 	
