--- a/example/zktm71BIS.html
+++ b/example/zktm71BIS.html
@@ -355,19 +355,19 @@ for (ii = 1; ii <= Pz.length; ii++) {
      
 }
 	
-this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD; var iDbis=iD;
+this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD;
 
-disableOpts(iDbis);	
+disableOpts();	
 	
 } ////////////	
 	
 
-function disableOpts(iDbis) {
+function disableOpts() {
 // Get all options within <select id='ddlViewBy'>...</select>
 var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
 	
-        switch (iDbis) {
+        switch (this.iD) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
