--- a/example/zktm72BIS.html
+++ b/example/zktm72BIS.html
@@ -357,10 +357,11 @@ for (ii = 1; ii <= Pz.length; ii++) {
 	
 this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD;
 
-disableOpts();	
+// disableOpts();	
 	
 } ////////////	
-	
+
+disableOpts();	
 
 function disableOpts() {
 // Get all options within <select id='ddlViewBy'>...</select>
