--- a/example/zktm73BIS.html
+++ b/example/zktm73BIS.html
@@ -357,18 +357,17 @@ for (ii = 1; ii <= Pz.length; ii++) {
 	
 this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	this.iD=iD;
 
-// disableOpts();	
+ disableOpts();	
 	
 } ////////////	
 
-disableOpts();	
 
 function disableOpts() {
 // Get all options within <select id='ddlViewBy'>...</select>
 var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
-	
-        switch (this.iD) {
+
+        switch (iD) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
