--- a/example/zktm73BIS.html
+++ b/example/zktm73BIS.html
@@ -367,7 +367,7 @@ function disableOpts() {
 var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
 
-        switch (iD) {
+        switch (this.iD) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
