--- a/example/zktm74BIS.html
+++ b/example/zktm74BIS.html
@@ -488,9 +488,9 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
   			    ? op[ij].disabled = true
   			    : op[ij].disabled = false; 
 				}
-                
+                break;
 		} ///// fine switch ////
-this.iD=15; 
+
 
 }   //// fine funzione disableOpts() ////
 	
