Update and rename zktm78BIS.html to zktm79BIS.html

--- a/example/zktm79BIS.html
+++ b/example/zktm79BIS.html
@@ -290,7 +290,7 @@
 
 		    
 <span id="vettPeS" onclick="functionPeS()">
-<myelement id="mioelemento" onclick="disableOpts()">
+<myelement id="mioelemento"> <!-- <myelement id="mioelemento" onclick="disableOpts()"> -->
 <select id="ddlViewBy" onchange="changeFunc();">
   <option value="0" style="font-weight:bold;" selected="selected">Seleziona</option>
   <option value="1" style="font-weight:bold;">1 m</option>
