--- a/example/zktm80BIS.html
+++ b/example/zktm80BIS.html
@@ -357,17 +357,17 @@ for (ii = 1; ii <= Pz.length; ii++) {
 	
 this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=elD; this.Pz=Pz;	
 
- disableOpts();	
+ disableOpts(iD);	
 	
 } ////////////	
 
 
-function disableOpts() {
+function disableOpts(IDD) {
 // Get all options within <select id='ddlViewBy'>...</select>
 var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
-
-        switch (this.iD) {
+var iDD = IDD;
+        switch (iDD) {
 
            case 0:
                 for (var ij = 0; ij < op.length; ij++) {
