--- a/example/astrunz1.html
+++ b/example/astrunz1.html
@@ -359,7 +359,7 @@ this.Sx=Sx; this.Sy=Sy; this.Sz=Sz; this.Px=Px; this.Py=Py; this.D=D; this.elD=e
 
  
 // Get all options within <select id='ddlViewBy'>...</select>	
-var op = document.getElementById("ddlViewBy").getElementsByTagName("option");  alert(op);
+var op = document.getElementById("ddlViewBy").getElementsByTagName("option"); 
 
 
         switch (iD) {
