--- a/example/astrunz3.html
+++ b/example/astrunz3.html
@@ -323,10 +323,18 @@ var D;
 var elD;	
 var Pz;	
 var iD;	
-	
+var optemp = document.getElementById("ddlViewBy").getElementsByTagName("option");	
 	
 ///////////////////	
 function functionPeS() {	
+	
+	
+var optemp2 = this.optemp;
+
+for (var iop = 0; iop < optemp2.length; iop++) {
+    optemp2[iop].disabled = false;
+}	
+	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;
 var seqvettori ="?"+preseqvett;
 
