Update and rename astrunz6.html to astrunz7.html

--- a/example/astrunz7.html
+++ b/example/astrunz7.html
@@ -328,6 +328,8 @@ var iD;
 ///////////////////	
 function functionPeS() {	
 	
+document.getElementById("ddlViewBy").disabled=false;
+	
 var preseqvett = document.getElementById("modelDatartot").innerHTML;
 var seqvettori ="?"+preseqvett;
 
