Update and rename astrunz7.html to astrunz8.html

--- a/example/astrunz8.html
+++ b/example/astrunz8.html
@@ -567,7 +567,7 @@ for (var iop = 0; iop < optemp2.length; iop++) {
                      optemp2[iop].disabled = false;
                 }
 	
-*/	
+*/	document.getElementById("ddlViewBy").disabled=false;
 	
 }
 </script>		    
