Update and rename astrunz8.html to astrunz9.html

--- a/example/astrunz9.html
+++ b/example/astrunz9.html
@@ -487,7 +487,9 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
   			    : op[ij].disabled = false; 
 				}
                 
-		} ///// fine switch ////
+		} ///// fine switch ////    
+	
+	document.getElementById("ddlViewBy").disabled=false;
 
 } ////////////	
 	
@@ -567,7 +569,7 @@ for (var iop = 0; iop < optemp2.length; iop++) {
                      optemp2[iop].disabled = false;
                 }
 	
-*/	document.getElementById("ddlViewBy").disabled=false;
+*/	
 	
 }
 </script>		    
