Update and rename astrunz10.html to astrunz11.html

--- a/example/astrunz11.html
+++ b/example/astrunz11.html
@@ -490,7 +490,7 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
                 
 		} ///// fine switch ////    
 	
-	
+	iD=1; this.iD=1;
 
 } ////////////	
 	
