Update and rename astrunz14.html to astrunz15.html

--- a/example/astrunz15.html
+++ b/example/astrunz15.html
@@ -289,7 +289,7 @@
 <p id="distanzaitemcam"></p>
 
 		    
-<span id="vettPeS" onmouseenter="functionPeS()">
+<span id="vettPeS" onclick="functionPeS()">   <!-- su pc va bene evento onmouseenter su mobile va bene anche onclick -->
 <!-- <myelement id="mioelemento">  <myelement id="mioelemento" onclick="disableOpts()"> -->
 <select id="ddlViewBy" onchange="changeFunc();">
   <option value="0" style="font-weight:bold;" selected="selected">Seleziona</option>
