--- a/example/ANCORAastrunz.html
+++ b/example/ANCORAastrunz.html
@@ -498,6 +498,17 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 	
 function changeFunc() {
 	
+//////////////////////////////////////////
+	
+var indexforPz = ((parseInt(this.selectedIndex))-(this.iD));
+    var tempPz=this.Pz[indexforPz];
+    alert(this.Pz[indexforPz]);	
+	
+	
+	
+/////////////////////////////////////////	
+	
+	
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
 var coord;
