--- a/example/ANCORAastrunz3.html
+++ b/example/ANCORAastrunz3.html
@@ -495,19 +495,27 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 } ////////////	
 	
 //////////////////////////////////////////
-	
+	/*
 document.getElementById("ddlViewBy").onchange = function() {	
 var indexforPz = ((parseInt(this.selectedIndex))-(iD));
     var tempPz=Pz[indexforPz];
-    alert(Pz[indexforPz]);	
+    alert(Pz[indexforPz]);	*/
 }  
 /////////////////////////////////////////	
 	
 function changeFunc() {
-	
+		
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
 var coord;
+
+///////////////////////////////////////////////////////////////////////////////////////	
+var sctdInd = e.selectedIndex;	
+var indexforPz = ((parseInt(sctdInd))-(iD));
+var tempPz=Pz[indexforPz];
+alert(Pz[indexforPz]);	
+/////////////////////////////////////////////////////////////////////////////////////
+	
 	
 var hreftemp = document.getElementById("modelAr3Dlink").href;
 hreftemp = hreftemp.replace(/(&Dst=1%20m)+/g, "");
