Update and rename ANCORAastrunz4.html to ANCORAastrunz5.html

--- a/example/ANCORAastrunz5.html
+++ b/example/ANCORAastrunz5.html
@@ -511,9 +511,9 @@ var coord;
 
 ///////////////////////////////////////////////////////////////////////////////////////	
 var sctdInd = e.selectedIndex;	
-var indexforPz = ((parseInt(sctdInd))-(this.iD));
-var tempPz=this.Pz[indexforPz];
-alert(this.Pz[indexforPz]);	
+var indexforPz = parseInt(sctdInd) - iD;
+var tempPz=Pz[indexforPz];
+alert(Pz[indexforPz]);	
 /////////////////////////////////////////////////////////////////////////////////////
 	
 	
