Update and rename ANCORAastrunz5.html to ANCORAastrunz6.html

--- a/example/ANCORAastrunz6.html
+++ b/example/ANCORAastrunz6.html
@@ -499,8 +499,8 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 document.getElementById("ddlViewBy").onchange = function() {	
 var indexforPz = ((parseInt(this.selectedIndex))-(iD));
     var tempPz=Pz[indexforPz];
-    alert(Pz[indexforPz]);	*/
-}  
+    alert(Pz[indexforPz]);	
+}  */
 /////////////////////////////////////////	
 	
 function changeFunc() {
