--- a/example/zktm-onmouseenter.html
+++ b/example/zktm-onmouseenter.html
@@ -494,13 +494,28 @@ var op = document.getElementById("ddlViewBy").getElementsByTagName("option");
 
 } ////////////	
 	
-	
+//////////////////////////////////////////
+	/*
+document.getElementById("ddlViewBy").onchange = function() {	
+var indexforPz = ((parseInt(this.selectedIndex))-(iD));
+    var tempPz=Pz[indexforPz];
+    alert(Pz[indexforPz]);	
+}  */
+/////////////////////////////////////////	
 	
 function changeFunc() {
-	
+		
 var e = document.getElementById("ddlViewBy");
 var strUser = e.options[e.selectedIndex].text;
 var coord;
+
+///////////////////////////////////////////////////////////////////////////////////////	
+var sctdInd = e.selectedIndex;	
+var indexforPz = parseInt(sctdInd) - iD;
+var tempPz=Pz[indexforPz];
+//alert(Pz[indexforPz]);	
+/////////////////////////////////////////////////////////////////////////////////////
+	
 	
 var hreftemp = document.getElementById("modelAr3Dlink").href;
 hreftemp = hreftemp.replace(/(&Dst=1%20m)+/g, "");
@@ -525,7 +540,7 @@ if (strUser != "Seleziona")  {
 
 	
 coord = ""; document.getElementById("modelAr3Dlink").href = "";
-coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8]+"";
+coord = hreftemp+"&Dst="+strUser+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+Pz[indexforPz]+"";
 // document.getElementById("modelAr3Dlink").href = coord;
 	
 var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare ripetizioni i.e. Sz
@@ -539,7 +554,7 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
          		var reSy = new RegExp("&Sy="+this.Sy, "gi");
         		var rePx = new RegExp("&Px="+this.Px, "gi");
         		var rePy = new RegExp("&Py="+this.Py, "gi");
-			var rePz = new RegExp("&Pz="+this.Pz, "gi");
+			var rePz = new RegExp("&Pz="+Pz[indexforPz], "gi");
 		
 			var noSz = coord.replace(reSz, "");
          		var noSzSx = noSz.replace(reSx, "");
@@ -549,7 +564,7 @@ var count = (coord.match(/Sz/g) || []).length; // conta un parametro per evitare
 			var noSzSxSyPxPyPz = noSzSxSyPxPy.replace(rePz, "");
 			
 			coord="";
-			coord = noSzSxSyPxPy+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+this.Pz[8];
+			coord = noSzSxSyPxPy+"&Sx="+this.Sx+"&Sy="+this.Sy+"&Sz="+this.Sz+"&Px="+this.Px+"&Py="+this.Py+"&Pz="+Pz[indexforPz];
 					
 		       document.getElementById("modelAr3Dlink").href = coord;
 		       }
