--- a/example/ANCORAcumpa.html
+++ b/example/ANCORAcumpa.html
@@ -128,10 +128,33 @@ function getParameterByName(name, url) {
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 }
+	
 var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
 var buy = getParameterByName('buyurl');
+var Sx = getParameterByName('Sx');
+var Sy = getParameterByName('Sy');
+var Sz = getParameterByName('Sz');
+var Px = getParameterByName('Px');
+var Py = getParameterByName('Py');
+	
+var urlperPz = 	window.location.href;
+var quasiPz = urlperPz.split("&Py=").pop();
+var Pz = quasiPz.split("&Pz=").pop();
+	
+alert(link);
+alert(item);
+alert(Dst);
+alert(buyurl);
+alert(Sx);
+alert(Sy);
+alert(Sz);
+alert(Px);
+alert(Py);
+alert(Pz);
+	
+
 	
 var linkdir = link.replace(".gltf","");	
 var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/"+linkdir+"/glTF-Embedded/"+link;	
