--- a/example/ANCORAcumpa5.html
+++ b/example/ANCORAcumpa5.html
@@ -117,7 +117,7 @@
 
 </div></div>
   
-<script>
+<script>   /*
 //////////   funzione per raccogliere variabili js
 function getParameterByName(name, url) {
     if (!url) url = window.location.href;
@@ -137,11 +137,11 @@ var Sx = getParameterByName('Sx');
 var Sy = getParameterByName('Sy');
 var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
-var Py = getParameterByName('Py');
+var Py = getParameterByName('Py');    */
 	
 var urlperPz = 	window.location.href;
 var quasiPz = urlperPz.split("&Py=").pop();
-var Pz = quasiPz.split("&Pz=").pop();
+var Pz = quasiPz.split("&Pz=").pop();    
 	
 alert(link);
 alert(item);
