Update and rename ANCORAcumpa5.html to ANCORAcumpa6.html

--- a/example/ANCORAcumpa6.html
+++ b/example/ANCORAcumpa6.html
@@ -139,10 +139,12 @@ var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
 var Py = getParameterByName('Py');    */
 	
+
+	
 var urlperPz = 	window.location.href;
 var quasiPz = urlperPz.split("&Py=").pop();
 var Pz = quasiPz.split("&Pz=").pop();    
-	
+/*	
 alert(link);
 alert(item);
 alert(Dst);
@@ -151,7 +153,7 @@ alert(Sx);
 alert(Sy);
 alert(Sz);
 alert(Px);
-alert(Py);
+alert(Py); */
 alert(Pz);
 	
 
