Update and rename ANCORAcumpa6.html to ANCORAcumpa7.html

--- a/example/ANCORAcumpa7.html
+++ b/example/ANCORAcumpa7.html
@@ -117,7 +117,7 @@
 
 </div></div>
   
-<script>   /*
+<script>   
 //////////   funzione per raccogliere variabili js
 function getParameterByName(name, url) {
     if (!url) url = window.location.href;
@@ -128,16 +128,16 @@ function getParameterByName(name, url) {
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 }
-	
+/*	
 var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
-var buy = getParameterByName('buyurl');
-var Sx = getParameterByName('Sx');
+var buy = getParameterByName('buyurl'); 
+var Sx = getParameterByName('Sx');   */
 var Sy = getParameterByName('Sy');
 var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
-var Py = getParameterByName('Py');    */
+var Py = getParameterByName('Py');    
 	
 
 	
@@ -153,8 +153,8 @@ alert(Sx);
 alert(Sy);
 alert(Sz);
 alert(Px);
-alert(Py); */
-alert(Pz);
+alert(Py); 
+alert(Pz); */
 	
 
 	
