Update and rename ANCORAcumpa7.html to ANCORAcumpa8.html

--- a/example/ANCORAcumpa8.html
+++ b/example/ANCORAcumpa8.html
@@ -128,12 +128,12 @@ function getParameterByName(name, url) {
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 }
-/*	
+	
 var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
 var buy = getParameterByName('buyurl'); 
-var Sx = getParameterByName('Sx');   */
+var Sx = getParameterByName('Sx');   
 var Sy = getParameterByName('Sy');
 var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
@@ -149,12 +149,12 @@ alert(link);
 alert(item);
 alert(Dst);
 alert(buyurl);
-alert(Sx);
+alert(Sx); */
 alert(Sy);
 alert(Sz);
 alert(Px);
 alert(Py); 
-alert(Pz); */
+//alert(Pz); 
 	
 
 	
