Update and rename ANCORAcumpa8.html to ANCORAcumpa9.html

--- a/example/ANCORAcumpa9.html
+++ b/example/ANCORAcumpa9.html
@@ -147,9 +147,9 @@ var Pz = quasiPz.split("&Pz=").pop();
 /*	
 alert(link);
 alert(item);
-alert(Dst);
+alert(Dst); */
 alert(buyurl);
-alert(Sx); */
+alert(Sx); 
 alert(Sy);
 alert(Sz);
 alert(Px);
