Update and rename ANCORAcumpa9.html to ANCORAcumpa10.html

--- a/example/ANCORAcumpa10.html
+++ b/example/ANCORAcumpa10.html
@@ -147,16 +147,16 @@ var Pz = quasiPz.split("&Pz=").pop();
 /*	
 alert(link);
 alert(item);
-alert(Dst); */
+alert(Dst); 
 alert(buyurl);
 alert(Sx); 
 alert(Sy);
 alert(Sz);
 alert(Px);
 alert(Py); 
-//alert(Pz); 
+//alert(Pz); */
 	
-
+alert(link+" "+item+" "+Dst+" "+buyurl+" "+Sx+" "+Sy+" "+Sz+" "+Px+" "+Py+" "+Pz);
 	
 var linkdir = link.replace(".gltf","");	
 var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/"+linkdir+"/glTF-Embedded/"+link;	
