--- a/example/ANCORAcumpa12.html
+++ b/example/ANCORAcumpa12.html
@@ -119,7 +119,7 @@
   
 <script>   
 //////////   funzione per raccogliere variabili js    
-	/*
+	
 function getParameterByName(name, url) {
     if (!url) url = window.location.href;
     name = name.replace(/[\[\]]/g, "\\$&");
@@ -133,52 +133,28 @@ function getParameterByName(name, url) {
 var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
-var buy = getParameterByName('buyurl'); 
+//var buy = getParameterByName('buyurl'); 
 var Sx = getParameterByName('Sx');   
 var Sy = getParameterByName('Sy');
 var Sz = getParameterByName('Sz');
 var Px = getParameterByName('Px');
 var Py = getParameterByName('Py');    
-	*/
-	
-/////////////////////
 
-var urlp = window.location.href;
-let searchParams = new URLSearchParams(urlp.search);
-
-var link = searchParams.get('link');
-var item = searchParams.get('item');
-var Dst = searchParams.get('Dst');
-var buy = searchParams.get('buyurl'); 
-var Sx = searchParams.get('Sx');   
-var Sy = searchParams.get('Sy');
-var Sz = searchParams.get('Sz');
-var Px = searchParams.get('Px');
-var Py = searchParams.get('Py'); 
 	
-	
-var quasiPz = urlp.split("&Py=").pop();
-var Pz = quasiPz.split("&Pz=").pop()	
-	
-	
-	
-/////////////////
-
-/*	
 var urlperPz = 	window.location.href;
 var quasiPz = urlperPz.split("&Py=").pop();
-var Pz = quasiPz.split("&Pz=").pop();   */
+var Pz = quasiPz.split("&Pz=").pop();   
 	
 alert(link);
 alert(item);
 alert(Dst); 
-alert(buyurl);
+//alert(buyurl);
 alert(Sx); 
 alert(Sy);
 alert(Sz);
 alert(Px);
 alert(Py); 
-alert(Pz); 
+//alert(Pz); 
 	
 
 	
