--- a/example/ANCORAcumpa13.html
+++ b/example/ANCORAcumpa13.html
@@ -133,7 +133,7 @@ function getParameterByName(name, url) {
 var link = getParameterByName('link');
 var item = getParameterByName('item');
 var Dst = getParameterByName('Dst');
-//var buy = getParameterByName('buyurl'); 
+var buy = getParameterByName('buyurl'); 
 var Sx = getParameterByName('Sx');   
 var Sy = getParameterByName('Sy');
 var Sz = getParameterByName('Sz');
@@ -148,13 +148,13 @@ var Pz = quasiPz.split("&Pz=").pop();
 alert(link);
 alert(item);
 alert(Dst); 
-//alert(buyurl);
+alert(buy);
 alert(Sx); 
 alert(Sy);
 alert(Sz);
 alert(Px);
 alert(Py); 
-//alert(Pz); 
+alert(Pz); 
 	
 
 	
