Update and rename ANCORAdaje1.html to ANCORAdaje2.html

--- a/example/ANCORAdaje2.html
+++ b/example/ANCORAdaje2.html
@@ -31,10 +31,10 @@
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
 	  
 	  
-   <!--   ///////////////////////////////////////////////////////////////////////////////////////     
+   <!--   ///////////////////////////////////////////////////////////////////////////////////////    --> 
     <link rel="stylesheet" type="text/css" href="css/bootstrapbootbox.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/bootstrapbootbox.min.js"></script>     -->
+    <script src="js/bootstrapbootbox.min.js"></script>     
     <script src="js/bootbox.min.js"></script>
     <script>
       $(window).load(function() {
