--- a/example/ANCORAcollega.html
+++ b/example/ANCORAcollega.html
@@ -49,6 +49,23 @@
     </script>	  
       ////////////////////////////////////////////////////////////////////////////////////////     -->	
 	  
+<script>
+$.sweetModal({
+	content: '<center>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
+	title: 'RUOTA IL DISPOSITIVO',
+	icon: $.sweetModal.ICON_ERROR,
+
+	buttons: [
+		{
+			label: 'OK',
+			classes: 'redB'
+		}
+	]
+});
+</script>	  
+	  
+	  
+	  
        
   </head>
 
