--- a/example/ANCORAcollega.html
+++ b/example/ANCORAcollega.html
@@ -48,7 +48,14 @@
                 });
     </script>	  
       ////////////////////////////////////////////////////////////////////////////////////////     -->	
+	
 	  
+	  
+	  
+
+<link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
+<script src="js/jquery.sweet-modal6.js"></script>
+
 <script>
 $.sweetModal({
 	content: '<center>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
