--- a/example/ANCORAcollega1.html
+++ b/example/ANCORAcollega1.html
@@ -30,32 +30,10 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
 	  
-	  
-   <!--   ///////////////////////////////////////////////////////////////////////////////////////   
-    <link rel="stylesheet" type="text/css" href="css/bootstrapbootbox.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/bootstrapbootbox.min.js"></script>     
-    <script src="js/bootbox.min.js"></script>
-    <script>
-      $(window).load(function() {
-       			if(window.innerHeight > window.innerWidth){         
-						var some_html = '<center><img class="alert" src="orientdevice.png" width="70%" height="70%" /></center>';
-    					some_html += '<center>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u></center>';
-    					some_html += '<center>per elaborare la giusta prospettiva!</center>';
-                        some_html += '<center>Poi clicca <u><b>OK</b></u>.</center>';
-   					    bootbox.alert(some_html);               
-     			}
-                });
-    </script>	  
-      ////////////////////////////////////////////////////////////////////////////////////////     -->	
-	
-	  
-	  
-	  
-
+<!--  inserimento scripts per sweetmodal pop up --> 
 <link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
 <script src="js/jquery.sweet-modal6.js"></script>
-
+<!--  fine scripts per sweetmodal pop up -->
   
   </head>
 
@@ -63,7 +41,7 @@
 <!-- start the body of your page -->
 <body>
 
-	
+<!--  sweetmodal pop up rotazione schermo device-->	
 <script>
 $.sweetModal({
 	content: '<center>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
@@ -78,6 +56,7 @@ $.sweetModal({
 	]
 });
 </script>
+<!--  fine sweetmodal pop up rotazione schermo device-->
 	
 	
 	
