--- a/example/ANCORAcollega2.html
+++ b/example/ANCORAcollega2.html
@@ -44,9 +44,10 @@
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
 $.sweetModal({
-	content: '<center>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
 	title: 'RUOTA IL DISPOSITIVO',
-	icon: $.sweetModal.ICON_ERROR,
+    content: '<center><img src="orientdevice.png" alt="Smiley face" width="40%" height="40%"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
+	
+	
 
 	buttons: [
 		{
