Update and rename ANCORAcollega2.html to ANCORAcollega3.html

--- a/example/ANCORAcollega3.html
+++ b/example/ANCORAcollega3.html
@@ -45,7 +45,7 @@
 <script>
 $.sweetModal({
 	title: 'RUOTA IL DISPOSITIVO',
-    content: '<center><img src="orientdevice.png" alt="Smiley face" width="40%" height="40%"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
+    content: '<center><img src="orientdevice.png"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
 	
 	
 
