Update and rename ANCORAcollega3.html to ANCORAcollega4.html

--- a/example/ANCORAcollega4.html
+++ b/example/ANCORAcollega4.html
@@ -43,6 +43,9 @@
 
 <!--  sweetmodal pop up rotazione schermo device-->	
 <script>
+$(window).load(function() {
+       	if(window.innerHeight > window.innerWidth){ 
+		
 $.sweetModal({
 	title: 'RUOTA IL DISPOSITIVO',
     content: '<center><img src="orientdevice.png"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
@@ -56,6 +59,10 @@ $.sweetModal({
 		}
 	]
 });
+	
+		
+  }
+});				
 </script>
 <!--  fine sweetmodal pop up rotazione schermo device-->
 	
