Update and rename ANCORAcollega4.html to ANCORAcollega5.html

--- a/example/ANCORAcollega5.html
+++ b/example/ANCORAcollega5.html
@@ -48,7 +48,7 @@ $(window).load(function() {
 		
 $.sweetModal({
 	title: 'RUOTA IL DISPOSITIVO',
-    content: '<center><img src="orientdevice.png"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
+    content: '<center><img src="orientationdevice.png"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
 	
 	
 
