Update and rename alertnoorientation1.html to alertnoorientation2.html

--- a/example/alertnoorientation2.html
+++ b/example/alertnoorientation2.html
@@ -147,11 +147,11 @@ var Pz = quasiPz.split("&Pz=").pop();
 
 	
 var linkdir = link.replace(".gltf","");	
-var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/"+linkdir+"/glTF-Embedded/"+link;	
-
+var linkfin = "https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/"+linkdir+"/"+link;	
+/*
 alert(linkdir);
 alert(link);
-alert(linkfin);
+alert(linkfin);  */
 	
 document.getElementById("buyidlink").href=buy;	
 	
