Update and rename alertnoorientation2.html to alertnoorientation3.html

--- a/example/alertnoorientation3.html
+++ b/example/alertnoorientation3.html
@@ -147,11 +147,8 @@ var Pz = quasiPz.split("&Pz=").pop();
 
 	
 var linkdir = link.replace(".gltf","");	
-var linkfin = "https://raw.githubusercontent.com/StoriaNum/mobrea/gh-pages/"+linkdir+"/"+link;	
-/*
-alert(linkdir);
-alert(link);
-alert(linkfin);  */
+var linkfin = "https://cdn.rawgit.com/StoriaNum/mobrea/gh-pages/"+linkdir+"/"+link;	
+
 	
 document.getElementById("buyidlink").href=buy;	
 	
