--- a/example/alertorientation3.html
+++ b/example/alertorientation3.html
@@ -174,22 +174,12 @@ var Py = getParameterByName('Py');
 var urlperPz = 	window.location.href;
 var quasiPz = urlperPz.split("&Py=").pop();
 var Pz = quasiPz.split("&Pz=").pop();   
-	
-alert(link);
-alert(item);
-alert(Dst); 
-alert(buy);
-alert(Sx); 
-alert(Sy);
-alert(Sz);
-alert(Px);
-alert(Py); 
-alert(Pz); 
-	
 
 	
 var linkdir = link.replace(".gltf","");	
-var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/"+linkdir+"/glTF-Embedded/"+link;	
+//var linkfin = "https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/"+linkdir+"/glTF-Embedded/"+link;	
+	
+var linkfin = "https://cdn.rawgit.com/StoriaNum/mobrea/gh-pages/"+linkdir+"/"+link;
 
 document.getElementById("buyidlink").href=buy;	
 	
