--- a/example/mobileitO.html
+++ b/example/mobileitO.html
@@ -19,7 +19,7 @@
     
     <script src="js/zcarxexample6.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdn.rawgit.com/StoriaNum/workshops/gh-pages/example/js/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
