--- a/example/zktm80BIS.html
+++ b/example/zktm80BIS.html
@@ -39,12 +39,44 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
 
-       
+
+<!--  inserimento scripts per sweetmodal pop up --> 
+<link href="css/jquery.sweet-modal.min.css" rel="stylesheet">
+<script src="js/jquery.sweet-modal6.js"></script>
+<!--  fine scripts per sweetmodal pop up -->	  
+	  
+	  
   </head>
 
 
 <!-- start the body of your page -->
 <body>
+	
+
+<!--  sweetmodal pop up rotazione schermo device-->	
+<script>
+$(window).load(function() {
+       	if(window.innerHeight > window.innerWidth){ 
+		
+$.sweetModal({
+	title: 'RUOTA IL DISPOSITIVO',
+    content: '<center><img src="orientationdevice.png"><br>Poni il dispositivo in modalit&agrave; <u><b>LANDSCAPE</b></u><br>per elaborare la giusta prospettiva!<br>Poi clicca <u><b>OK</b></u> !</center>',
+	
+	
+	buttons: [
+		{
+			label: 'OK',
+			classes: 'redB'
+		}
+	]
+});
+	
+		
+  }
+});				
+</script>
+<!--  fine sweetmodal pop up rotazione schermo device-->	
+	
 	
 	
 	
