Update and rename zktm80BIS.html to zktm81BIS.html

--- a/example/zktm81BIS.html
+++ b/example/zktm81BIS.html
@@ -729,15 +729,15 @@ for (var iop = 0; iop < optemp2.length; iop++) {
 	</div>                    
 
 
-
+<!--
   <a-scene>
-    <!-- this is the "stage" of your 3D content -->
+  
 
-    <a-entity camera="" position="0 1.6 5"></a-entity> <!-- We move the camera around a bit -->
-    <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity> <!-- Have a light shining down on our scene -->
-    <a-entity light="type:ambient; intensity:0.5"></a-entity> <!-- and some ambient lighting -->
+    <a-entity camera="" position="0 1.6 5"></a-entity> 
+    <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity>
+    <a-entity light="type:ambient; intensity:0.5"></a-entity> 
 
-    <!-- we define our gltf model -->
+    
     <a-assets>
       <a-asset-item id="avocado" src=""></a-asset-item>
     </a-assets>
@@ -748,7 +748,7 @@ for (var iop = 0; iop < optemp2.length; iop++) {
     
     </a-scene>
 	
-	
+-->	
 	
 </body>
 </html> 
