--- a/example/zktm84BIS.html
+++ b/example/zktm84BIS.html
@@ -32,9 +32,9 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/html2canvas.js"></script>
-<!--
+
 <script src="https://cdn.rawgit.com/StoriaNum/aframe/master/dist/aframe-v0.7.1gioversion.min.js"></script>	  
-<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>   -->
+<script src="https://cdn.rawgit.com/StoriaNum/AR.js/master/aframe/build/aframe-ar.js"></script>   
 <!-- include a polyfill for chrome android 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>  -->
 <script src="https://cdn.rawgit.com/StoriaNum/webrtc/gh-pages/ultimoadapter.js"></script>
@@ -729,10 +729,10 @@ for (var iop = 0; iop < optemp2.length; iop++) {
 	</div>                    
 
 
-<!--
+
   <a-scene>
   
-
+<!--
     <a-entity camera="" position="0 1.6 5"></a-entity> 
     <a-entity light="type:directional;castShadow:true" position="0 10 0"></a-entity>
     <a-entity light="type:ambient; intensity:0.5"></a-entity> 
@@ -744,10 +744,10 @@ for (var iop = 0; iop < optemp2.length; iop++) {
 
     <a-entity gltf-model="#avocado" look-controls="reverseMouseDrag:true" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
 
- 
+ -->
     
     </a-scene>
-	-->
+	
 	
 	
 </body>
